# gegl

./: Makefile.am
examples/: sdl-draw.c
gcut/: gcut.c  iconographer.c
gegl/: gegl-config.c  gegl-init.c  gegl-types-internal.h
gegl/buffer/: Makefile.am  gegl-buffer-access.c  gegl-buffer-iterator.c  gegl-buffer-types.h  gegl-buffer.c  gegl-buffer.h  gegl-sampler.c  gegl-tile-handler-cache.c
gegl/graph/: gegl-node.h
gegl/opencl/: gegl-cl-color.c  gegl-cl-init.c
gegl/operation/: gegl-operation-point-composer.c  gegl-operation-point-composer.h  gegl-operation-point-filter.c  gegl-operation-point-filter.h  gegl-operation.c  gegl-operation.h
gegl/process/: gegl-processor.c
gegl/property-types/: gegl-color.c
opencl/: colors.cl.h  random.cl.h
operations/common/: Makefile.am  alien-map.c  antialias.c  bilateral-filter-fast.c  bilateral-filter.c  box-blur.c  brightness-contrast.c  bump-map.c  c2g.c  channel-mixer.c  checkerboard.c  color-enhance.c  color-exchange.c  color-reduction.c  color-rotate.c  color-temperature.c  color-to-alpha.c  component-extract.c  (+74 more)
operations/common-gpl3+/: antialias.c  bump-map.c  cartoon.c  channel-mixer.c  color-exchange.c  color-to-alpha.c  displace.c  edge-laplace.c  edge.c  illusion.c  lens-flare.c  mosaic.c  motion-blur-circular.c  oilify.c  plasma.c  red-eye-removal.c  sinus.c  softglow.c  spiral.c  tile-glass.c  value-propagate.c  video-degradation.c  wind.c
perf/: test-samplers.c  test-translate.c
seamless-clone/: sc-common.h
tests/compositions/: Makefile.am
tools/: detect_opencl.c  gegl-imgcmp.c  gegl-tester.c
(+26 files in other folders)
